David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Contrast_Reading_Normal_Mode__c.field-meta.xml
<CustomField>
    <fullName>Contrast_Reading_Normal_Mode__c</fullName>
    <label>Contrast Reading - Normal Mode</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>