David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Control_Panel_Articulation__c.field-meta.xml
<CustomField>
    <fullName>Control_Panel_Articulation__c</fullName>
    <label>Control Panel Articulation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>