David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Control_Panel_Comments__c.field-meta.xml
<CustomField>
    <fullName>Control_Panel_Comments__c</fullName>
    <label>Control Panel Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>