David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Cooling_Systems_and_Heat_Exchangers__c.field-meta.xml
<CustomField>
    <fullName>Cooling_Systems_and_Heat_Exchangers__c</fullName>
    <label>Cooling Systems and Heat Exchangers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>