David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Counterbalance_Comments__c.field-meta.xml
<CustomField>
    <fullName>Counterbalance_Comments__c</fullName>
    <label>Counterbalance Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>