David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Coverage_Level__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Level__c</fullName>
    <label>Coverage Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>