David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Covers_Secured__c.field-meta.xml
<CustomField>
    <fullName>Covers_Secured__c</fullName>
    <label>Covers Secured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>