David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Covers_Secured_Comments__c.field-meta.xml
<CustomField>
    <fullName>Covers_Secured_Comments__c</fullName>
    <label>Covers Secured Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>