David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Created_By_Me__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Me__c</fullName>
    <formula>IF(CreatedById == $User.Id,&quot;True&quot;,&quot;False&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Me</label>
    <type>Text</type>
</CustomField>