David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/CS_and_HE_Comments__c.field-meta.xml
<CustomField>
    <fullName>CS_and_HE_Comments__c</fullName>
    <inlineHelpText>Cooling Systems and Heat Exchangers Comments</inlineHelpText>
    <label>CS and HE Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>