David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Customer_Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Asset_Number__c</fullName>
    <formula>Contract_Line_Item__r.Hospital_Asset_Number__c</formula>
    <inlineHelpText>Pulled from the Contact Line Item on the Service Appointment&apos;s &quot;Hospital Asset Number&quot; field</inlineHelpText>
    <label>Customer Asset Number</label>
    <type>Text</type>
</CustomField>