David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>