David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/DAP_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>DAP_Accuracy__c</fullName>
    <label>DAP Accuracy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>