David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/DAP_Accuracy_Comments__c.field-meta.xml
<CustomField>
    <fullName>DAP_Accuracy_Comments__c</fullName>
    <label>DAP Accuracy Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>