David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Database_Capacity_and_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Database_Capacity_and_Maintenance__c</fullName>
    <label>Database Capacity and Maintenance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>