David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Database_Capacity_Maintenance_Comments__c.field-meta.xml
<CustomField>
    <fullName>Database_Capacity_Maintenance_Comments__c</fullName>
    <label>Database Capacity &amp; Maintenance Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>