David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Defragment_Console__c.field-meta.xml
<CustomField>
    <fullName>Defragment_Console__c</fullName>
    <label>Defragment Console</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>