David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>Contract_Line_Item__r.Department__c</formula>
    <label>Department</label>
    <type>Text</type>
</CustomField>