David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Detector_Charging__c.field-meta.xml
<CustomField>
    <fullName>Detector_Charging__c</fullName>
    <label>Detector Charging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>