David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Detector_Docking_Stations_Comments__c.field-meta.xml
<CustomField>
    <fullName>Detector_Docking_Stations_Comments__c</fullName>
    <label>Detector Docking Stations Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>