David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Detector_Drives_and_Sensors_Comments__c.field-meta.xml
<CustomField>
    <fullName>Detector_Drives_and_Sensors_Comments__c</fullName>
    <label>Detector Drives and Sensors Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>