David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Detector_Drop_Sensors_Comments__c.field-meta.xml
<CustomField>
    <fullName>Detector_Drop_Sensors_Comments__c</fullName>
    <label>Detector Drop Sensors Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>