David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Detector_Resolution_Comments__c.field-meta.xml
<CustomField>
    <fullName>Detector_Resolution_Comments__c</fullName>
    <label>Detector Resolution Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>