David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Diagnostic_Test_Comments__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Test_Comments__c</fullName>
    <label>Diagnostic Test Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>