David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/DICOM_PACS_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>DICOM_PACS_IP_Address__c</fullName>
    <formula>Contract_Line_Item__r.DICOM_PACS_IP_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DICOM PACS IP Address</label>
    <type>Text</type>
</CustomField>