David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/DICOM_Port_No__c.field-meta.xml
<CustomField>
    <fullName>DICOM_Port_No__c</fullName>
    <formula>Contract_Line_Item__r.DICOM_PACS_Port_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DICOM Port No</label>
    <type>Text</type>
</CustomField>