David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Direct_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Direct_Acquisition__c</fullName>
    <label>Direct Acquisition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>