David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Direct_Acquisition_Comments__c.field-meta.xml
<CustomField>
    <fullName>Direct_Acquisition_Comments__c</fullName>
    <label>Direct Acquisition Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>