David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Display_Device__c.field-meta.xml
<CustomField>
    <fullName>Display_Device__c</fullName>
    <label>Display Device</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>