David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Display_Device_Comments__c.field-meta.xml
<CustomField>
    <fullName>Display_Device_Comments__c</fullName>
    <label>Display Device Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>