David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Distance_Markers_and_Detents__c.field-meta.xml
<CustomField>
    <fullName>Distance_Markers_and_Detents__c</fullName>
    <label>Distance Markers and Detents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>