David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Distance_Markers_and_Detents_Comments__c.field-meta.xml
<CustomField>
    <fullName>Distance_Markers_and_Detents_Comments__c</fullName>
    <label>Distance Markers and Detents Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>