David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Dose_Affected__c.field-meta.xml
<CustomField>
    <fullName>Dose_Affected__c</fullName>
    <label>Dose Affected?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>