David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Drive_Belt_Gear_Wheel__c.field-meta.xml
<CustomField>
    <fullName>Drive_Belt_Gear_Wheel__c</fullName>
    <label>Drive Belt/Gear Wheel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>