David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Drive_Belt_Gear_Wheel_Comments__c.field-meta.xml
<CustomField>
    <fullName>Drive_Belt_Gear_Wheel_Comments__c</fullName>
    <label>Drive Belt/Gear Wheel Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>