David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Drive_Shafts_Clean_and_Serviceable__c.field-meta.xml
<CustomField>
    <fullName>Drive_Shafts_Clean_and_Serviceable__c</fullName>
    <label>Drive Shafts Clean and Serviceable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>