David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Drive_Shafts_Comments__c.field-meta.xml
<CustomField>
    <fullName>Drive_Shafts_Comments__c</fullName>
    <label>Drive Shafts Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>