David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/ECG_Leads_Patient_Leakage__c.field-meta.xml
<CustomField>
    <fullName>ECG_Leads_Patient_Leakage__c</fullName>
    <label>ECG Leads Patient Leakage (μA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>