David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/ECG_Leads_Patient_Leakage_Comments__c.field-meta.xml
<CustomField>
    <fullName>ECG_Leads_Patient_Leakage_Comments__c</fullName>
    <label>ECG Leads Patient Leakage Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>