David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/EMC_Sealing__c.field-meta.xml
<CustomField>
    <fullName>EMC_Sealing__c</fullName>
    <label>EMC Sealing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>