David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/EMC_Sealing_Comments__c.field-meta.xml
<CustomField>
    <fullName>EMC_Sealing_Comments__c</fullName>
    <label>EMC Sealing Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>