David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Emergency_Stop_Switches_and_Isolators__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Stop_Switches_and_Isolators__c</fullName>
    <label>Emergency Stop Switches and Isolators</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>