David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Emergency_Stop_Switches_Comments__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Stop_Switches_Comments__c</fullName>
    <label>Emergency Stop Switches Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>