David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Encoder_Module_Encoder_Disc__c.field-meta.xml
<CustomField>
    <fullName>Encoder_Module_Encoder_Disc__c</fullName>
    <label>Encoder Module/Encoder Disc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>