David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Encoder_Module_Encoder_Disc_Comments__c.field-meta.xml
<CustomField>
    <fullName>Encoder_Module_Encoder_Disc_Comments__c</fullName>
    <label>Encoder Module/Encoder Disc Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>