David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/End_to_End_DICOM__c.field-meta.xml
<CustomField>
    <fullName>End_to_End_DICOM__c</fullName>
    <label>End-to-End DICOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>