David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/End_to_End_DICOM_Comments__c.field-meta.xml
<CustomField>
    <fullName>End_to_End_DICOM_Comments__c</fullName>
    <label>End-to-End DICOM Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>