David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Engineers_Comments__c.field-meta.xml
<CustomField>
    <fullName>Engineers_Comments__c</fullName>
    <inlineHelpText>Notes to be filled in by the Engineer carrying out the Service Appointment</inlineHelpText>
    <label>Engineer&apos;s Comments</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>