David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Engineers_Required__c.field-meta.xml
<CustomField>
    <fullName>Engineers_Required__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Engineers Required</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>