David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Environment_Left_in_Safe_Condition__c.field-meta.xml
<CustomField>
    <fullName>Environment_Left_in_Safe_Condition__c</fullName>
    <label>Environment Left in Safe Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>