David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Equipment_City_Zip__c.field-meta.xml
<CustomField>
    <fullName>Equipment_City_Zip__c</fullName>
    <formula>Work_Order__r.Contract_Line_Item__r.Location_of_Equipment__r.ShippingCity &amp; &quot;, &quot; &amp;  Work_Order__r.Contract_Line_Item__r.Location_of_Equipment__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment City/Zip</label>
    <type>Text</type>
</CustomField>