David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Equipment_Handover_Completed_Comments__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Handover_Completed_Comments__c</fullName>
    <label>Equipment Handover Completed Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>