David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Equipment_Location__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Location__c</fullName>
    <formula>Contract_Line_Item__r.Location_of_Equipment__r.Name</formula>
    <label>Equipment Location</label>
    <type>Text</type>
</CustomField>