David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Equipotential_Bonding_Bolt__c.field-meta.xml
<CustomField>
    <fullName>Equipotential_Bonding_Bolt__c</fullName>
    <label>Equipotential Bonding Bolt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>