David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Equipotential_Bonding_Bolt_Comments__c.field-meta.xml
<CustomField>
    <fullName>Equipotential_Bonding_Bolt_Comments__c</fullName>
    <label>Equipotential Bonding Bolt Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>