David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <label>Error Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>