David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Error_Logs_Comments__c.field-meta.xml
<CustomField>
    <fullName>Error_Logs_Comments__c</fullName>
    <label>Error Logs Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>