David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Exposure_Checks_Comments__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Checks_Comments__c</fullName>
    <label>Exposure Checks Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>