David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Exposure_Controls_Comments__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Controls_Comments__c</fullName>
    <label>Exposure Controls Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>