David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Exposure_Index__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Index__c</fullName>
    <label>Exposure Index</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>