David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Exposure_Indicators__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Indicators__c</fullName>
    <label>Exposure Indicators</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>