David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Fan_Operation__c.field-meta.xml
<CustomField>
    <fullName>Fan_Operation__c</fullName>
    <label>Fan Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>