David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Fan_Operation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Fan_Operation_Comments__c</fullName>
    <label>Fan Operation Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>