David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/FF_Outputs__c.field-meta.xml
<CustomField>
    <fullName>FF_Outputs__c</fullName>
    <label>FF Outputs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>