David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/FF_Outputs_Comments__c.field-meta.xml
<CustomField>
    <fullName>FF_Outputs_Comments__c</fullName>
    <label>FF Outputs Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>