David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Files_and_Tabs__c.field-meta.xml
<CustomField>
    <fullName>Files_and_Tabs__c</fullName>
    <label>Files and Tabs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>