David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Final_Functional_Checks__c.field-meta.xml
<CustomField>
    <fullName>Final_Functional_Checks__c</fullName>
    <label>Final Functional Checks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pass_Fail_Test_Options</valueSetName>
    </valueSet>
</CustomField>