David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/Final_Functional_Checks_Comments__c.field-meta.xml
<CustomField>
    <fullName>Final_Functional_Checks_Comments__c</fullName>
    <label>Final Functional Checks Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>