David 2 Probo medical/force-app/main/default/objects/ServiceAppointment/fields/First_Time_Fix__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Fix__c</fullName>
    <description>Subsequent Service Appointment is blank.</description>
    <formula>ISBLANK(Subsequent_Service_Appointment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Time Fix</label>
    <type>Checkbox</type>
</CustomField>